--- a/src/index.css
+++ b/src/index.css
@@ -160,7 +160,7 @@
     .bg-pink-purple {
         background-image: url("assets/img/bg-above-the-fold.png");
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: contain;
         background-attachment: fixed;
         background-position: top center;
     }
