--- a/src/index.css
+++ b/src/index.css
@@ -1,172 +1,171 @@
-@import url('https://fonts.googleapis.com/css2?family=Jersey+10&family=Manrope:wght@200..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Jersey+10&family=Manrope:wght@200..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 @import "tailwindcss";
 
 @custom-variant dark (&:where(.dark, .dark *));
 
 @theme {
-    --font-raleway: 'Raleway', sans-serif;
-    --color-primary: #0FAE96;
-    --color-secondary: #511281;
-    --color-main: #11011E;
-    --color-pure-black: #000000;
-    --color-light-grey: #EAEAEA;
-    --color-grey-subtitle: #808080;
-    --color-wireframe-grey: #C6C6C6;
-    --color-black-title: #2B2B2B;
-    --color-pure-white: #FFFFFF;
-    --color-light-subtitle: #B6B6B6;
-    --color-light-title: #ECF1F0;
-    --color-green-title: #0D3E36;
-    --color-green-subtitle: #4D625F;
+  --font-raleway: "Raleway", sans-serif;
+  --color-primary: #0fae96;
+  --color-secondary: #511281;
+  --color-main: #11011e;
+  --color-pure-black: #000000;
+  --color-light-grey: #eaeaea;
+  --color-grey-subtitle: #808080;
+  --color-wireframe-grey: #c6c6c6;
+  --color-black-title: #2b2b2b;
+  --color-pure-white: #ffffff;
+  --color-light-subtitle: #b6b6b6;
+  --color-light-title: #ecf1f0;
+  --color-green-title: #0d3e36;
+  --color-green-subtitle: #4d625f;
 }
 
-
 @layer components {
+  * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
 
-    * {
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-    }
+  *:focus,
+  *:focus-visible {
+    outline: none;
+  }
 
-    *:focus, *:focus-visible {
-        outline: none;
-    }
+  body {
+    @apply font-raleway;
+  }
 
-    body {
-        @apply font-raleway;
-    }
+  .container {
+    @apply !max-w-[1260px];
+  }
 
-    .container {
-        @apply !max-w-[1260px]
-    }
+  .heading-1 {
+    font-weight: 700;
+    font-size: 72px;
+    line-height: 136%;
+  }
 
-    .heading-1 {
-        font-weight: 700;
-        font-size: 72px;
-        line-height: 136%;
-    }
+  .heading-2 {
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 133%;
+  }
 
-    .heading-2 {
-        font-weight: 700;
-        font-size: 48px;
-        line-height: 133%;
-    }
+  .heading-3 {
+    @apply text-green-title dark:text-light-title;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 122%;
+  }
 
-    .heading-3 {
-        @apply  text-green-title dark:text-light-title;
-        font-weight: 700;
-        font-size: 36px;
-        line-height: 122%;
-    }
+  .heading-4 {
+    font-weight: 600;
+    font-size: 28px;
+    line-height: 179%;
+  }
 
-    .heading-4 {
-        font-weight: 600;
-        font-size: 28px;
-        line-height: 179%;
-    }
+  .heading-5 {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 133%;
+  }
 
-    .heading-5 {
-        font-weight: 600;
-        font-size: 24px;
-        line-height: 133%;
-    }
+  .heading-6 {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 150%;
+  }
 
-    .heading-6 {
-        font-weight: 600;
-        font-size: 20px;
-        line-height: 150%;
-    }
+  .subtitle-medium-1 {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 160%;
+  }
 
-    .subtitle-medium-1 {
-        font-weight: 500;
-        font-size: 18px;
-        line-height: 160%;
-    }
+  .subtitle-regular-1 {
+    @apply text-green-subtitle dark:text-light-subtitle;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 160%;
+  }
 
-    .subtitle-regular-1 {
-        @apply text-green-subtitle dark:text-light-subtitle;
-        font-weight: 400;
-        font-size: 18px;
-        line-height: 160%;
-    }
+  .subtitle-medium-2 {
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 144%;
+  }
 
-    .subtitle-medium-2 {
-        font-weight: 500;
-        font-size: 15px;
-        line-height: 144%;
-    }
+  .subtitle-regular-2 {
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 144%;
+  }
 
-    .subtitle-regular-2 {
-        font-weight: 400;
-        font-size: 15px;
-        line-height: 144%;
-    }
+  .caption-medium-1 {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+  }
 
-    .caption-medium-1 {
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 150%;
-    }
+  .caption-regular-1 {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+  }
 
-    .caption-regular-1 {
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 150%;
-    }
+  .caption-medium-2 {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 157%;
+  }
 
-    .caption-medium-2 {
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 157%;
-    }
+  .caption-regular-2 {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 157%;
+  }
 
-    .caption-regular-2 {
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 157%;
-    }
+  .label-semibold-1 {
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 150%;
+  }
 
-    .label-semibold-1 {
-        font-weight: 600;
-        font-size: 16px;
-        line-height: 150%;
-    }
+  .label-medium-1 {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+  }
 
-    .label-medium-1 {
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 150%;
-    }
+  .label-semibold-2 {
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 133%;
+  }
 
-    .label-semibold-2 {
-        font-weight: 600;
-        font-size: 12px;
-        line-height: 133%;
-    }
+  .label-medium-2 {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 133%;
+  }
 
-    .label-medium-2 {
-        font-weight: 500;
-        font-size: 12px;
-        line-height: 133%;
-    }
+  .capitalized-text {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 89%;
+    font-variant: all-small-caps;
+  }
 
-    .capitalized-text {
-        font-weight: 500;
-        font-size: 18px;
-        line-height: 89%;
-        font-variant: all-small-caps;
-    }
+  .bg-pink-purple {
+    background-image: url("assets/img/bg-above-the-fold.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: top center;
+  }
 
-    .bg-pink-purple {
-        background-image: url("assets/img/bg-above-the-fold.png");
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-attachment: fixed;
-        background-position: top center;
-    }
-
-    .btn-success {
-        @apply bg-primary text-white px-5 py-3 rounded-xl cursor-pointer hover:opacity-80 transition-all flex
-    }
+  .btn-success {
+    @apply bg-primary text-white px-5 py-3 rounded-xl cursor-pointer hover:opacity-80 transition-all flex;
+  }
 }
